kubernetes-configfile/mern-app/mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: mongodb-deployment
  labels: 
    app: mongodb
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: mongodb
  template:
    metadata: 
      labels: 
        app: mongodb
    spec: 
      containers: 
      - name: mongodb
        image: mongo:latest
        ports: 
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec: 
  selector: 
    app: mongodb
  ports: 
    - protocol: TCP
      port: 27017
      targetPort: 27017
